--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,20 @@
+:root{
+    --primary-color:  #ffd5c2;
+    --second-color:  #ade8f4;
+    --background-color: #FEFFFE;
+    --title-size: 2.4rem;
+    --title: 2rem;
+    --font-size:  1.6rem;
+    --title-header-family: 'Redressed', cursive;
+    --width: 100vw;
+    --font-color:  #353945;
+
+   
+}
+
 html{
     font-size: 62.5%;
+    
 }
 
 * {
@@ -9,18 +24,18 @@ html{
 }
 
 body{
-    color: #264653;
-    background-color: #FEFFFE;
+    background-color: var(--background-color);
     align-items: center;
     display: flex;
     flex-direction: column;
+    color: var(--font-color)
 }
 
 header{
-    width: 100%;
+    min-width: var(--width);
     height: auto;
-    min-height: 4.5rem;
-    background-color: #fcd5ce;
+    min-height: 5rem;
+    background-color: var(--background-color);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -28,63 +43,69 @@ header{
 }
 
 .main-nav{
-    width: calc(47%);
     display: flex;
     list-style: none;
     justify-content: space-around;
 }
 
 .main-nav li{
-    display: inline-block;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .main-nav li a{
     text-decoration: none;
-    color: #9C0D38;
+    color: var(--font-color);
     font-weight: bold;
     font-size: 1.4rem;
+    margin-right: 1rem;
+    flex-grow: 1;
 }
 
 .main-nav li a:hover{
-    color: white;
+    color: #9C0D38;
 }
 
 .main_name{
-    font-family: 'Redressed', cursive;
-    font-size: 2.2rem;
+    font-family: var(--title-header-family);
+    font-size: 2.8rem;
     color:black;
 }
 
 main{
-    width: 100vw;
-    height: 100vm;
+    width: var(--width);
+    height: 100vh;
     display: flex;
     justify-content: center;
+    background:  -webkit-linear-gradient(30deg, #f0efeb 40%, var(--background-color) 60%);
 }
-
+.fondo{
+    width: 50vw;
+    background-color: var(--background-color);
+}
 .home{
+    margin-top: 4rem;
     width: 50%;
     min-width: 320px;
     max-width: 570px;
     height: auto;
     min-height: 370px;
-    margin: 1rem 0;
     padding-top: 1rem;
-    background-color: #fcd5ce;
-    font-size: 1.6rem;
+    background-color: var(--background-color);
+    font-size: var(--font-size);
     box-shadow:
-       inset 0 -0.7em 0.7em rgba(0,0,0,0.1),
+       inset 0 -0.7em 0.7rem rgba(0,0,0,0.1),
              0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
+             0.3em 0.3em 1rem rgba(0,0,0,0.3);
 }
 
 .photo_text{
+    margin-top: 1.5rem;
     display: flex;
     flex-flow: column wrap;
     align-items: center;
 }
 .photo_text section{
-    width: 100%;
     display: flex;
     flex-flow: column wrap;
     align-items: center;
@@ -95,32 +116,33 @@ main{
 }
 
 .home .photo_profile img{
-    width: 36%;
-    height: auto;
+    width: 18.5rem;
+    height: 18.5rem;
     min-width: 120px;
     border-radius: 50%;
 }
 
 .nom_profesion{
-    color:black;
-    font-size: 1.5rem;
-    font-family: 'Oswald', sans-serif;
-    margin-bottom: 1rem;
+    font-family: var(--title-header-family);
+    color: black;
+    font-size: var(--title-size); 
+    margin: 1rem 0;
 }
 
 hr {
-    width: 20%;
+    width: 5rem;
     height: 3px;
     background-color: black;
     border-color: transparent;
+    margin: 1rem;
 }
 
 .home .profile{
-    background-color: white;
+    background-color: var(--background-color);
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    margin-bottom: 1rem;
 }
 
 .home .profile p{
@@ -128,21 +150,22 @@ hr {
 }
 
 .profile .sec-button{
-    width: 60%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 .profile section a{
     text-decoration: none;
-    color: #14213d;
+    color: black;
     font-weight: bold;
 }
 .profile section span{
-    min-width: 85px;
+    margin-right: 1rem;
+    width: 30vw;
+    min-width: 90px;
     max-width: 115px;
     height: 3.5rem;
-    background-color: #ade8f4;
+    background-color: var(--primary-color);
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -150,11 +173,12 @@ hr {
 }
 
 .profile section a:hover{
-    color:#fefae0;
+    color: #9C0D38;
 }
 
+
 .profile section span:active{
-    background-color: #e63946;
+    background-color: #BEE3DB;
 }
 
 .redes{
@@ -170,11 +194,11 @@ hr {
 
 footer{
     margin-top: 3%;
-    width: 100%;
+    width: var(--width);
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    margin-bottom: 1%;
+    margin-bottom: 1vh;
 }
 
 footer img{
