--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
     --primary-color:  #ffd5c2;
     --second-color:  #ade8f4;
     --background-color: #FEFFFE;
-    --title-size: 2.4rem;
+    --title-size: 2.7rem;
     --title: 2rem;
     --font-size:  1.6rem;
     --title-header-family: 'Redressed', cursive;
@@ -25,179 +25,123 @@ html{
 
 body{
     background-color: var(--background-color);
-    align-items: center;
-    display: flex;
-    flex-direction: column;
     color: var(--font-color)
 }
 
 header{
-    min-width: var(--width);
-    height: auto;
-    min-height: 5rem;
+    width: var(--width);
+    min-width: 320px;
     background-color: var(--background-color);
     display: flex;
     justify-content: space-around;
-    align-items: center;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .main-nav{
+    display: none;
+}
+.main-nav-mobile{
+    width: var(--width);
+    min-width: 320px;
+    max-width: 440px;
     display: flex;
     list-style: none;
     justify-content: space-around;
 }
 
-.main-nav li{
-    display: flex;
-    flex-wrap: wrap;
+.portafolio-icono{
+    vertical-align: bottom;
 }
 
-.main-nav li a{
-    text-decoration: none;
-    color: var(--font-color);
-    font-weight: bold;
-    font-size: 1.4rem;
-    margin-right: 1rem;
-    flex-grow: 1;
-}
-
-.main-nav li a:hover{
-    color: #9C0D38;
+.main-nav-mobile img{
+    width: 25px;
+    height: 25px;
 }
 
 .main_name{
     font-family: var(--title-header-family);
-    font-size: 2.8rem;
+    font-size: 3.6rem;
     color:black;
 }
 
-main{
-    width: var(--width);
-    height: auto;
+.sect-img-hello{
+    height: 35vh;
+    min-width: 320px;
+    overflow: hidden;
     display: flex;
+    align-items: center;
     justify-content: center;
-    background:  -webkit-linear-gradient(30deg, #f0efeb 40%, var(--background-color) 60%);
+}
+.sect-img-hello img{
+    min-width: 320px;
+    width: 100%;
+}
+
+
+.hello{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    background-color: var(--primary-color);
+    color: black;
+    opacity: .9;    
+}
+
+
+.hello h1{
+    margin: 0.5rem 0;
+    font-size: 2rem;
+    font-family: var(--title-header-family);
+}
+
+.hello h2{
+    text-align: center;
+    width: 100%;
+    margin: 0.5rem 0;
+    font-size: var(--font-size);
+    font-style: oblique;
+
 }
 
 .home{
-    margin-top: 4rem;
-    width: 50%;
-    min-width: 320px;
-    max-width: 570px;
-    height: auto;
-    min-height: 370px;
-    padding-top: 1rem;
-    background-color: var(--background-color);
-    font-size: var(--font-size);
-    box-shadow:
-       inset 0 -0.7em 0.7rem rgba(0,0,0,0.1),
-             0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1rem rgba(0,0,0,0.3);
-}
-
-.photo_text{
-    margin-top: 1.5rem;
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-}
-.photo_text section{
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-}
-
-.home .photo_profile{
-    text-align: center;
-}
-
-.home .photo_profile img{
-    width: 18.5rem;
-    height: 18.5rem;
-    min-width: 120px;
-    border-radius: 50%;
-}
-
-.nom_profesion{
-    font-family: var(--title-header-family);
-    color: black;
-    font-size: var(--title-size); 
-    margin: 1rem 0;
-}
-
-hr {
-    width: 5rem;
-    height: 3px;
-    background-color: black;
-    border-color: transparent;
-    margin: 1rem;
-}
-
-.home .profile{
+    
+    padding: 2rem 0;
     background-color: var(--background-color);
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 1rem;
 }
 
-.home .profile p{
-    padding: 2rem;
+.photo_profile img{
+    width: 160px;
+    height: 140px;
+    border-radius: 50%;
 }
 
-.profile .sec-button{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-.profile section a{
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-}
-.profile section span{
-    margin-right: 1rem;
+.redes{
     width: 30vw;
-    min-width: 90px;
-    max-width: 115px;
-    height: 3.5rem;
+    max-width: 15rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+} 
+
+.down-button{
+    height: 3rem;
+    width: 15rem;
     background-color: var(--primary-color);
-    border-radius: 5px;
+    font-weight: bold;
+    border-radius: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.profile section a:hover{
-    color: #9C0D38;
-}
-
-
-.profile section span:active{
-    background-color: #BEE3DB;
-}
-
-.redes{
-    margin-top: 1rem;
-    text-align: center;
-}
-
-.home .redes img{
-    height: auto;
-    width: 20px;
-    margin: 3px;
-}
-
-footer{
-    margin-top: 3%;
-    width: var(--width);
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    margin-bottom: 1vh;
-}
-
-footer img{
-    width: 25px;
+.down-button a{
+    text-decoration: none;
+    font-size: var(--font-size);
+    color: var(--font-color);
 }
