--- a/css/index.css
+++ b/css/index.css
@@ -39,17 +39,10 @@ header{
     align-items: center;
 }
 
-main{
-    background-color: aqua;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-}
 .main-nav-mobile{
     width: var(--width);
-    min-width: 320px;
-    max-width: 440px;
+    min-width: 32rem;
+    max-width: 44rem;
     display: flex;
     list-style: none;
     justify-content: space-around;
@@ -69,7 +62,13 @@ main{
     font-size: 3.6rem;
     color:black;
 }
-
+main{
+    min-width: 320px;
+    background-color: aqua;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
 .sect-img-hello{
     width: 100vw;
     height: 35vh;
@@ -81,7 +80,7 @@ main{
 }
 .sect-img-hello img{
     min-width: 320px;
-    width: 100%;
+    width: var(--width);
 }
 
 
@@ -112,7 +111,9 @@ main{
 
 }
 
-.home{
+/* Foto / redes / descargar cv */
+.photo_redes{
+    width: var(--width);
     padding: 2rem 0;
     background-color: var(--background-color);
     display: flex;
@@ -156,9 +157,10 @@ main{
     color: var(--font-color);
 }
 
+/* Profile */
 .about-me{
     padding: 0 1rem;
-    height: 16rem;
+    height: auto;
 }
 
 h2, .frase-platzi{
@@ -166,8 +168,6 @@ h2, .frase-platzi{
     color: var(--font-color);
     text-align: center;
     font-weight: bolder;
-
-
 }
 
 p{
@@ -175,43 +175,63 @@ p{
     margin: 0.5rem 0;
 }
 
-.educaction h3{
-    font-size: var(--font-size);
-   
-}
+/* Educación formal */
 
 .education{
+    width: var(--width);
+    height: auto;
     background-color: rgb(160, 160, 200);
     text-align: left;
     padding: 1rem;
     font-size: var(--font-size);
 }
 
+.educaction h3{
+    font-size: var(--font-size);
+   
+}
+/* skills */
+.skills{
+    width: var(--width);
+    min-height: 32rem;
+    height: auto;
+    text-align: left;
+    padding: 1rem;
+    font-size: var(--font-size);
+    background-color: crimson;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.skills h2{
+    width: var(--width);
+}
+
+.proyectos{
+    width: var(--width);
+    background-color: orange;
+}
 form{
-    margin-top: 10px;
-    height: 40vh;
-    width: 30vw;
-    min-width: 320px;
+    height: auto;
+    min-height: 20rem;
+    width: var(--width);
+    min-width: 30rem;
     background-color: var(--background-color);
-    border-radius: 4%;
-    font-size: 1.6rem;
-    border-style:dotted;
-    border-color: var(--font-color);
-    border-width: medium;
+    font-size: var(--font-size);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-
 }
 
-form span{
+form span, form p{
     background-color: rgb(163, 251, 243);
     text-align: left;
     font-weight: bold;
 }
 input{
-    width: 200px;
+    width: 20rem;
 }
 
 #enviar{
@@ -222,7 +242,7 @@ input{
 
 
 footer{
-    margin-top: 3%;
+    margin-top: 1rem;
     width: var(--width);
     display: flex;
     justify-content: center;
@@ -230,7 +250,4 @@ footer{
     margin-bottom: 1vh;
 }
 
-footer img{
-    width: 25px;
-}
 
