--- a/css/index.css
+++ b/css/index.css
@@ -5,10 +5,11 @@
     --title-size: 2.7rem;
     --title: 2rem;
     --font-size:  1.6rem;
+    --font-size-bold:  1.4rem;
     --title-header-family: 'Redressed', cursive;
     --width: 100vw;
     --font-color:  #353945;
-
+    --min-width: 320px;
    
 }
 
@@ -31,7 +32,7 @@ body{
 
 header{
     width: var(--width);
-    min-width: 320px;
+    min-width: var(--min-width);
     background-color: var(--background-color);
     display: flex;
     justify-content: space-around;
@@ -44,7 +45,7 @@ header{
     min-width: 32rem;
     max-width: 44rem;
     display: flex;
-    list-style: none;
+    list-style: none;  
     justify-content: space-around;
 }
 
@@ -63,7 +64,7 @@ header{
     color:black;
 }
 main{
-    min-width: 320px;
+    min-width: var(--min-width);
     background-color: aqua;
     height: auto;
     display: flex;
@@ -71,15 +72,16 @@ main{
 }
 .sect-img-hello{
     width: 100vw;
+    min-width: var(--min-width);
     height: 35vh;
-    min-width: 320px;
+    min-width: var(--min-width);
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .sect-img-hello img{
-    min-width: 320px;
+    min-width: var(--min-width);
     width: var(--width);
 }
 
@@ -113,6 +115,7 @@ main{
 
 /* Foto / redes / descargar cv */
 .photo_redes{
+    min-width: var(--min-width);
     width: var(--width);
     padding: 2rem 0;
     background-color: var(--background-color);
@@ -159,8 +162,14 @@ main{
 
 /* Profile */
 .about-me{
-    padding: 0 1rem;
+    min-width: var(--min-width);
+    width: var(--width);
+    padding: 0 2rem;
     height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 }
 
 h2, .frase-platzi{
@@ -178,20 +187,39 @@ p{
 /* Educación formal */
 
 .education{
+    min-width: var(--min-width);
     width: var(--width);
     height: auto;
     background-color: rgb(160, 160, 200);
     text-align: left;
-    padding: 1rem;
-    font-size: var(--font-size);
+    font-size: var(--font-size-bold);
+    padding: 1.5rem 2rem;
+    padding-left: 4rem;
 }
 
+ul span{
+    font-style: oblique;
+    font-size: var(--font-size-bold);
+}
+
+
+.what-learn{
+    font-weight: normal;
+    font-size: var(--font-size-bold);
+    font-style: oblique;
+}
 .educaction h3{
-    font-size: var(--font-size);
-   
+    font-size: var(--font-size);   
+}
+
+.awards{
+    min-width: var(--min-width);
+    background-color: palegoldenrod;
+    padding: 1rem 1.5rem;
 }
 /* skills */
 .skills{
+    min-width: var(--min-width);
     width: var(--width);
     min-height: 32rem;
     height: auto;
@@ -209,32 +237,47 @@ p{
 }
 
 .proyectos{
+    min-width: var(--min-width);
     width: var(--width);
     background-color: orange;
 }
-form{
-    height: auto;
-    min-height: 20rem;
+.form-content{
+    padding-top: 1rem;
+    min-width: var(--min-width);
     width: var(--width);
-    min-width: 30rem;
-    background-color: var(--background-color);
-    font-size: var(--font-size);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+form{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    margin: 1rem 0;
+    height: auto;
+    min-height: 28rem;
+    width: 60%;
+    min-width: 32rem;
+    max-width: 40rem;
+    background-color: var(--background-color);
+    font-size: var(--font-size);  
+    text-align: center;  
 }
 
-form span, form p{
+
+form span{
     background-color: rgb(163, 251, 243);
     text-align: left;
     font-weight: bold;
 }
 input{
-    width: 20rem;
+    width: auto;
 }
 
 #enviar{
+    width: 6rem;
+    height: 3rem;
     background-color: rgb(163, 251, 243);
     font-weight: bold;
     border-color: black;
